# Earandil

./: ADBformat.txt  CMakeLists.txt  DlgDocAdd.cpp  DlgDocAdd.hpp  DlgDocAdd.ui  DlgDocSetPath.cpp  DlgDocSetPath.hpp  DlgDocSetPath.ui  DlgEditDocument.cpp  DlgEditDocument.hpp  DlgEditDocument.ui  DlgSetDBFile.cpp  DlgSetDBFile.hpp  DlgSetDBFile.ui  DocProperty.cpp  DocProperty.hpp  Document.cpp  Document.hpp  Global.hpp  Languages.cpp  Languages.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Settings.cpp  Settings.hpp  TODO.txt  WorkingDB.cpp  WorkingDB.hpp
Dialog/: AddDocumentation.cpp  AddDocumentation.hpp  AddDocumentation.ui  EditDocPath.cpp  EditDocPath.hpp  EditDocPath.ui  EditDocProperty.cpp  EditDocProperty.hpp  EditDocProperty.ui  SetDBFilename.cpp  SetDBFilename.hpp  SetDBFilename.ui
Docs/: BUGS.txt  SPECS.txt  TODO.txt
Validator/: ValidatorDevStep.cpp  ValidatorDevStep.hpp  ValidatorSN_full.cpp  ValidatorSN_full.hpp  ValidatorSN_suffix.cpp  ValidatorSN_suffix.hpp
